--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Probot app name
         uses: maximilianone/add-task-issue-labels@main
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
